--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.4.1",
+    "flow-bin": "^0.37.4"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.22.0",
