--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A minimal Electron application",
   "main": "bootstrap.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "test": "mocha --compilers js:babel-register 'app/**/*.spec.js?(x)'",
+    "test-debug": "mocha --inspect --debug-brk --compilers js:babel-register 'app/**/*.spec.js?(x)'"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -17,8 +19,12 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
+    "chai": "^3.5.0",
     "electron": "^1.4.1",
-    "flow-bin": "^0.37.4"
+    "enzyme": "^2.7.1",
+    "flow-bin": "^0.37.4",
+    "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.2"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.22.0",
